react-wrapper attempt that doesn't work

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,17 @@
     />
 
     <title>rttshirts</title>
-    <script src="https://accounts.google.com/gsi/client" async defer class="google"></script>
+    <script
+      src="https://accounts.google.com/gsi/client"
+      async
+      defer
+      class="google"
+    ></script>
+    <!-- <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-AJWcIWytaWPIQ5HHFIOgMzGDRfNVhTA&callback=initMap"
+      async
+      defer
+    ></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
